tests/knowledge/testing-accounts-data/account-data-existing-sqs-queue-secure-policy/test/us-east-1/ec2-describe-internet-gateways.json
{
    "InternetGateways": [
        {
            "Attachments": [
                {
                    "State": "available",
                    "VpcId": "vpc-0f4b0f2543270b9b7"
                }
            ],
            "InternetGatewayId": "igw-009bd9a0a352ea31e",
            "OwnerId": "115553109071",
            "Tags": []
        },
        {
            "Attachments": [
                {
                    "State": "available",
                    "VpcId": "vpc-bd9b60c0"
                }
            ],
            "InternetGatewayId": "igw-b57c52ce",
            "OwnerId": "115553109071",
            "Tags": []
        }
    ]
}
