tests/knowledge/testing-accounts-data/account-data-existing-sqs-queue-secure-policy/test/us-east-1/ec2-describe-network-acls.json
{
    "NetworkAcls": [
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-16c94350",
                    "NetworkAclId": "acl-4756743a",
                    "SubnetId": "subnet-65f08f28"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-17c94351",
                    "NetworkAclId": "acl-4756743a",
                    "SubnetId": "subnet-a5ca61fa"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-15c94353",
                    "NetworkAclId": "acl-4756743a",
                    "SubnetId": "subnet-65f2936b"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-09c9434f",
                    "NetworkAclId": "acl-4756743a",
                    "SubnetId": "subnet-3260cf54"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-12c94354",
                    "NetworkAclId": "acl-4756743a",
                    "SubnetId": "subnet-4da6136c"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-14c94352",
                    "NetworkAclId": "acl-4756743a",
                    "SubnetId": "subnet-09956738"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-4756743a",
            "OwnerId": "115553109071",
            "Tags": [],
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-2fa28a70",
                    "NetworkAclId": "acl-0d2c164944545662a",
                    "SubnetId": "subnet-019bced379456a0e6"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-f1a58dae",
                    "NetworkAclId": "acl-0d2c164944545662a",
                    "SubnetId": "subnet-09d5b54057b7b868f"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-0d2c164944545662a",
            "OwnerId": "115553109071",
            "Tags": [],
            "VpcId": "vpc-0f4b0f2543270b9b7"
        }
    ]
}
