tests/knowledge/testing-accounts-data/account-data-existing-sqs-queue-secure-policy/test/us-east-1/ec2-describe-network-interfaces.json
{
    "NetworkInterfaces": [
        {
            "Association": {
                "IpOwnerId": "amazon-elb",
                "PublicDnsName": "",
                "PublicIp": "54.162.115.6"
            },
            "Attachment": {
                "AttachTime": "2020-12-15T16:17:28+00:00",
                "AttachmentId": "eni-attach-0afb692102cc5a428",
                "DeleteOnTermination": false,
                "DeviceIndex": 1,
                "InstanceOwnerId": "amazon-elb",
                "NetworkCardIndex": 0,
                "Status": "attached"
            },
            "AvailabilityZone": "us-east-1b",
            "Description": "ELB app/tf-lb-20201214135618581100000002/3c912999d618eabb",
            "Groups": [
                {
                    "GroupId": "sg-05ba915ccae40ca46",
                    "GroupName": "default"
                }
            ],
            "InterfaceType": "interface",
            "Ipv6Addresses": [],
            "MacAddress": "12:b0:bc:c1:9c:95",
            "NetworkInterfaceId": "eni-0da569a1f960fde33",
            "OwnerId": "115553109071",
            "PrivateIpAddress": "10.10.11.42",
            "PrivateIpAddresses": [
                {
                    "Association": {
                        "IpOwnerId": "amazon-elb",
                        "PublicDnsName": "",
                        "PublicIp": "54.162.115.6"
                    },
                    "Primary": true,
                    "PrivateIpAddress": "10.10.11.42"
                }
            ],
            "RequesterId": "amazon-elb",
            "RequesterManaged": true,
            "SourceDestCheck": true,
            "Status": "in-use",
            "SubnetId": "subnet-09d5b54057b7b868f",
            "TagSet": [],
            "VpcId": "vpc-0f4b0f2543270b9b7"
        }
    ]
}
