tests/knowledge/testing-accounts-data/account-data-existing-sqs-queue-secure-policy/test/us-east-1/ec2-describe-route-tables.json
{
    "RouteTables": [
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-82ea5cf3",
                    "RouteTableId": "rtb-e24c0a9c"
                }
            ],
            "OwnerId": "115553109071",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-e24c0a9c",
            "Routes": [
                {
                    "DestinationCidrBlock": "172.31.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "GatewayId": "igw-b57c52ce",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-091a4e51f4b9ac079",
                    "RouteTableId": "rtb-0f50223920a76063d"
                }
            ],
            "OwnerId": "115553109071",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0f50223920a76063d",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.10.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-0f4b0f2543270b9b7"
        },
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0848c9dcfa32c2e1d",
                    "RouteTableId": "rtb-0083f6d065d7dedaa",
                    "SubnetId": "subnet-09d5b54057b7b868f"
                },
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-05e95bf5039750d25",
                    "RouteTableId": "rtb-0083f6d065d7dedaa",
                    "SubnetId": "subnet-019bced379456a0e6"
                }
            ],
            "OwnerId": "115553109071",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0083f6d065d7dedaa",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.10.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "GatewayId": "igw-009bd9a0a352ea31e",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-0f4b0f2543270b9b7"
        }
    ]
}
