tests/knowledge/testing-accounts-data/account-data-existing-sqs-queue-secure-policy/test/us-east-1/ec2-describe-subnets.json
{
    "Subnets": [
        {
            "AssignIpv6AddressOnCreation": false,
            "AvailabilityZone": "us-east-1c",
            "AvailabilityZoneId": "use1-az4",
            "AvailableIpAddressCount": 4091,
            "CidrBlock": "172.31.16.0/20",
            "DefaultForAz": true,
            "Ipv6CidrBlockAssociationSet": [],
            "MapCustomerOwnedIpOnLaunch": false,
            "MapPublicIpOnLaunch": true,
            "OwnerId": "115553109071",
            "State": "available",
            "SubnetArn": "arn:aws:ec2:us-east-1:115553109071:subnet/subnet-65f08f28",
            "SubnetId": "subnet-65f08f28",
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "AssignIpv6AddressOnCreation": false,
            "AvailabilityZone": "us-east-1b",
            "AvailabilityZoneId": "use1-az2",
            "AvailableIpAddressCount": 4091,
            "CidrBlock": "172.31.80.0/20",
            "DefaultForAz": true,
            "Ipv6CidrBlockAssociationSet": [],
            "MapCustomerOwnedIpOnLaunch": false,
            "MapPublicIpOnLaunch": true,
            "OwnerId": "115553109071",
            "State": "available",
            "SubnetArn": "arn:aws:ec2:us-east-1:115553109071:subnet/subnet-4da6136c",
            "SubnetId": "subnet-4da6136c",
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "AssignIpv6AddressOnCreation": false,
            "AvailabilityZone": "us-east-1e",
            "AvailabilityZoneId": "use1-az3",
            "AvailableIpAddressCount": 4091,
            "CidrBlock": "172.31.48.0/20",
            "DefaultForAz": true,
            "Ipv6CidrBlockAssociationSet": [],
            "MapCustomerOwnedIpOnLaunch": false,
            "MapPublicIpOnLaunch": true,
            "OwnerId": "115553109071",
            "State": "available",
            "SubnetArn": "arn:aws:ec2:us-east-1:115553109071:subnet/subnet-09956738",
            "SubnetId": "subnet-09956738",
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "AssignIpv6AddressOnCreation": false,
            "AvailabilityZone": "us-east-1a",
            "AvailabilityZoneId": "use1-az1",
            "AvailableIpAddressCount": 251,
            "CidrBlock": "10.10.10.0/24",
            "DefaultForAz": false,
            "Ipv6CidrBlockAssociationSet": [],
            "MapCustomerOwnedIpOnLaunch": false,
            "MapPublicIpOnLaunch": false,
            "OwnerId": "115553109071",
            "State": "available",
            "SubnetArn": "arn:aws:ec2:us-east-1:115553109071:subnet/subnet-019bced379456a0e6",
            "SubnetId": "subnet-019bced379456a0e6",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "subnet1"
                }
            ],
            "VpcId": "vpc-0f4b0f2543270b9b7"
        },
        {
            "AssignIpv6AddressOnCreation": false,
            "AvailabilityZone": "us-east-1d",
            "AvailabilityZoneId": "use1-az6",
            "AvailableIpAddressCount": 4091,
            "CidrBlock": "172.31.32.0/20",
            "DefaultForAz": true,
            "Ipv6CidrBlockAssociationSet": [],
            "MapCustomerOwnedIpOnLaunch": false,
            "MapPublicIpOnLaunch": true,
            "OwnerId": "115553109071",
            "State": "available",
            "SubnetArn": "arn:aws:ec2:us-east-1:115553109071:subnet/subnet-a5ca61fa",
            "SubnetId": "subnet-a5ca61fa",
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "AssignIpv6AddressOnCreation": false,
            "AvailabilityZone": "us-east-1f",
            "AvailabilityZoneId": "use1-az5",
            "AvailableIpAddressCount": 4091,
            "CidrBlock": "172.31.64.0/20",
            "DefaultForAz": true,
            "Ipv6CidrBlockAssociationSet": [],
            "MapCustomerOwnedIpOnLaunch": false,
            "MapPublicIpOnLaunch": true,
            "OwnerId": "115553109071",
            "State": "available",
            "SubnetArn": "arn:aws:ec2:us-east-1:115553109071:subnet/subnet-65f2936b",
            "SubnetId": "subnet-65f2936b",
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "AssignIpv6AddressOnCreation": false,
            "AvailabilityZone": "us-east-1a",
            "AvailabilityZoneId": "use1-az1",
            "AvailableIpAddressCount": 4091,
            "CidrBlock": "172.31.0.0/20",
            "DefaultForAz": true,
            "Ipv6CidrBlockAssociationSet": [],
            "MapCustomerOwnedIpOnLaunch": false,
            "MapPublicIpOnLaunch": true,
            "OwnerId": "115553109071",
            "State": "available",
            "SubnetArn": "arn:aws:ec2:us-east-1:115553109071:subnet/subnet-3260cf54",
            "SubnetId": "subnet-3260cf54",
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "AssignIpv6AddressOnCreation": false,
            "AvailabilityZone": "us-east-1b",
            "AvailabilityZoneId": "use1-az2",
            "AvailableIpAddressCount": 250,
            "CidrBlock": "10.10.11.0/24",
            "DefaultForAz": false,
            "Ipv6CidrBlockAssociationSet": [],
            "MapCustomerOwnedIpOnLaunch": false,
            "MapPublicIpOnLaunch": false,
            "OwnerId": "115553109071",
            "State": "available",
            "SubnetArn": "arn:aws:ec2:us-east-1:115553109071:subnet/subnet-09d5b54057b7b868f",
            "SubnetId": "subnet-09d5b54057b7b868f",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "subnet2"
                }
            ],
            "VpcId": "vpc-0f4b0f2543270b9b7"
        }
    ]
}
