tests/knowledge/testing-accounts-data/account-data-existing-sqs-queue-secure-policy/test/us-east-1/ec2-describe-vpcs.json
{
    "Vpcs": [
        {
            "CidrBlock": "10.10.0.0/16",
            "CidrBlockAssociationSet": [
                {
                    "AssociationId": "vpc-cidr-assoc-0d09cc1f0117e510f",
                    "CidrBlock": "10.10.0.0/16",
                    "CidrBlockState": {
                        "State": "associated"
                    }
                }
            ],
            "DhcpOptionsId": "dopt-3045214a",
            "InstanceTenancy": "default",
            "IsDefault": false,
            "OwnerId": "115553109071",
            "State": "available",
            "VpcId": "vpc-0f4b0f2543270b9b7"
        },
        {
            "CidrBlock": "172.31.0.0/16",
            "CidrBlockAssociationSet": [
                {
                    "AssociationId": "vpc-cidr-assoc-03dd096c",
                    "CidrBlock": "172.31.0.0/16",
                    "CidrBlockState": {
                        "State": "associated"
                    }
                }
            ],
            "DhcpOptionsId": "dopt-3045214a",
            "InstanceTenancy": "default",
            "IsDefault": true,
            "OwnerId": "115553109071",
            "State": "available",
            "VpcId": "vpc-bd9b60c0"
        }
    ]
}
