tests/knowledge/testing-accounts-data/account-data-existing-sqs-queue-secure-policy/test/us-east-1/elbv2-describe-load-balancers.json
{
    "LoadBalancers": [
        {
            "AvailabilityZones": [
                {
                    "LoadBalancerAddresses": [],
                    "SubnetId": "subnet-019bced379456a0e6",
                    "ZoneName": "us-east-1a"
                },
                {
                    "LoadBalancerAddresses": [],
                    "SubnetId": "subnet-09d5b54057b7b868f",
                    "ZoneName": "us-east-1b"
                }
            ],
            "CanonicalHostedZoneId": "Z35SXDOTRQ7X7K",
            "CreatedTime": "2020-12-14T13:56:19.690000+00:00",
            "DNSName": "tf-lb-20201214135618581100000002-226463458.us-east-1.elb.amazonaws.com",
            "IpAddressType": "ipv4",
            "LoadBalancerArn": "arn:aws:elasticloadbalancing:us-east-1:115553109071:loadbalancer/app/tf-lb-20201214135618581100000002/3c912999d618eabb",
            "LoadBalancerName": "tf-lb-20201214135618581100000002",
            "Scheme": "internet-facing",
            "SecurityGroups": [
                "sg-05ba915ccae40ca46"
            ],
            "State": {
                "Code": "active"
            },
            "Type": "application",
            "VpcId": "vpc-0f4b0f2543270b9b7"
        }
    ]
}
