tests/knowledge/testing-accounts-data/account-data-existing-sqs-queue-secure-policy/test/us-east-1/kms-list-keys.json
{
    "Keys": [
        {
            "KeyArn": "arn:aws:kms:us-east-1:115553109071:key/033a057a-dd81-4bcd-b919-3a1f89e088ef",
            "KeyId": "033a057a-dd81-4bcd-b919-3a1f89e088ef"
        },
        {
            "KeyArn": "arn:aws:kms:us-east-1:115553109071:key/0beda993-5606-4465-8f67-ebdf3767472f",
            "KeyId": "0beda993-5606-4465-8f67-ebdf3767472f"
        },
        {
            "KeyArn": "arn:aws:kms:us-east-1:115553109071:key/205771cb-67bc-4f34-8bda-1ad305e9e99a",
            "KeyId": "205771cb-67bc-4f34-8bda-1ad305e9e99a"
        },
        {
            "KeyArn": "arn:aws:kms:us-east-1:115553109071:key/3144072f-ae81-4433-aa48-6c107ddbda69",
            "KeyId": "3144072f-ae81-4433-aa48-6c107ddbda69"
        },
        {
            "KeyArn": "arn:aws:kms:us-east-1:115553109071:key/33722bd4-8b1b-4564-92c9-549d0305149d",
            "KeyId": "33722bd4-8b1b-4564-92c9-549d0305149d"
        },
        {
            "KeyArn": "arn:aws:kms:us-east-1:115553109071:key/33bf2d52-02d8-458b-a635-9c4e40321afc",
            "KeyId": "33bf2d52-02d8-458b-a635-9c4e40321afc"
        },
        {
            "KeyArn": "arn:aws:kms:us-east-1:115553109071:key/3997ba43-3cad-4af1-9e5b-68bd891f5418",
            "KeyId": "3997ba43-3cad-4af1-9e5b-68bd891f5418"
        },
        {
            "KeyArn": "arn:aws:kms:us-east-1:115553109071:key/3f25c7c5-bc9f-4f33-93db-dcf293e51022",
            "KeyId": "3f25c7c5-bc9f-4f33-93db-dcf293e51022"
        },
        {
            "KeyArn": "arn:aws:kms:us-east-1:115553109071:key/4612f33e-3aba-4599-9df1-c310fdb1f9a5",
            "KeyId": "4612f33e-3aba-4599-9df1-c310fdb1f9a5"
        },
        {
            "KeyArn": "arn:aws:kms:us-east-1:115553109071:key/500f1d50-d543-4b71-b757-5294a95bca49",
            "KeyId": "500f1d50-d543-4b71-b757-5294a95bca49"
        },
        {
            "KeyArn": "arn:aws:kms:us-east-1:115553109071:key/52cc08b2-4fce-45c8-95e9-25df1165c3ff",
            "KeyId": "52cc08b2-4fce-45c8-95e9-25df1165c3ff"
        },
        {
            "KeyArn": "arn:aws:kms:us-east-1:115553109071:key/6b8c68d2-ca96-4bea-9bf3-0acb9062398b",
            "KeyId": "6b8c68d2-ca96-4bea-9bf3-0acb9062398b"
        },
        {
            "KeyArn": "arn:aws:kms:us-east-1:115553109071:key/6dc04914-20f2-4a11-8811-e382f36e9f0b",
            "KeyId": "6dc04914-20f2-4a11-8811-e382f36e9f0b"
        },
        {
            "KeyArn": "arn:aws:kms:us-east-1:115553109071:key/92818204-4285-42f9-a18f-1615bd8c7bf0",
            "KeyId": "92818204-4285-42f9-a18f-1615bd8c7bf0"
        },
        {
            "KeyArn": "arn:aws:kms:us-east-1:115553109071:key/9d25ba6e-a2e7-4f5b-bb11-d1224b441dea",
            "KeyId": "9d25ba6e-a2e7-4f5b-bb11-d1224b441dea"
        },
        {
            "KeyArn": "arn:aws:kms:us-east-1:115553109071:key/9f5b7e39-083d-4067-96f0-8979af1f58f0",
            "KeyId": "9f5b7e39-083d-4067-96f0-8979af1f58f0"
        },
        {
            "KeyArn": "arn:aws:kms:us-east-1:115553109071:key/a145befc-87ec-4479-8d3e-e2d5709e461d",
            "KeyId": "a145befc-87ec-4479-8d3e-e2d5709e461d"
        },
        {
            "KeyArn": "arn:aws:kms:us-east-1:115553109071:key/ab12c87a-1eca-406a-ac00-874c7677d1b1",
            "KeyId": "ab12c87a-1eca-406a-ac00-874c7677d1b1"
        },
        {
            "KeyArn": "arn:aws:kms:us-east-1:115553109071:key/c01a215a-c96c-4ab7-b78a-80af2bbfd220",
            "KeyId": "c01a215a-c96c-4ab7-b78a-80af2bbfd220"
        },
        {
            "KeyArn": "arn:aws:kms:us-east-1:115553109071:key/eb6356a9-19ed-4c1e-bea0-ec07148f098e",
            "KeyId": "eb6356a9-19ed-4c1e-bea0-ec07148f098e"
        },
        {
            "KeyArn": "arn:aws:kms:us-east-1:115553109071:key/fc025386-a30d-4178-8a70-30e3e31a275b",
            "KeyId": "fc025386-a30d-4178-8a70-30e3e31a275b"
        }
    ],
    "Truncated": false
}
