tests/knowledge/testing-accounts-data/account-data-existing-sqs-queue-secure-policy/test/us-east-1/sqs-list-queues.json
{
    "QueueUrls": [
        "https://queue.amazonaws.com/115553109071/cloudrail-secure-queue_2"
    ]
}
